k8s-ha-systemd/roles/post/templates/heketi.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heketi-deploy
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: heketi-deploy
  template:
    metadata:
      labels:
        app: heketi-deploy
    spec:
      containers:
      - name: heketi-deploy
        image: viktor90/heketi:latest
        ports:
        - containerPort: 8080
        - containerPort: 8081
        volumeMounts:
        - name: heketi-config
          mountPath: /etc/heketi
        - name: heketi-data
          mountPath: /var/lib/heketi
      volumes:
      - name: heketi-config
        hostPath:
          path: /etc/heketi
      - name: heketi-data
        hostPath:
          path: /var/lib/heketi
      nodeSelector:
        app: heketi
      tolerations:
      - key: "node-role.kubernetes.io/master"
        operator: "Exists"
        effect: "NoSchedule"

---

apiVersion: v1
kind: Service
metadata:
  labels:
    app: heketi
  name: heketi
  namespace: kube-system
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    nodePort: 31000
  selector:
    app: heketi-deploy
  type: NodePort
