k8s-ha-systemd/roles/post/templates/ingress.yml
## Generate auth file !named auth
## htpasswd -c auth viktor

## create secret in the correct namespace
## kubectl create secret generic basic-auth --from-file=auth --namespace example

## For k8s dashboard ingress add the following also
## nginx.ingress.kubernetes.io/secure-backends: "true"
## For newer ingress versions
## nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"


## For ssl support create certificate and then tls secret
## kubectl create secret tls tls-secret --key tls.key --cert tls.crt

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-with-auth
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    nginx.ingress.kubernetes.io/auth-realm: 'Authentication Required'
spec:
  tls:
    - hosts:
      - foo.bar.com
      secretName: tls-secret
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /
        backend:
          serviceName: http-svc
          servicePort: 80
